--- a/views/posts/post-card.pug
+++ b/views/posts/post-card.pug
@@ -1,8 +1,8 @@
 each post in posts
     article.blog-post
-        h2.blog-post-title.mb-1 #{post.title}
+        h2.blog-post-title.mb-1 #{ post.title }
         p.blog-post-meta
-            | #{ post.created_at } by
+            | #{ new Date(post.created_at).toLocaleString('default', { month: 'short' }) } #{ new Date(post.created_at).getDate() < 10 ? '0' + new Date(post.created_at).getDate() : new Date(post.created_at).getDate()} by #{' '}
             a(href='#') #{ post.author }
         p
             | #{ post.body }
